--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,8 +7,7 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                sh 'npm install'
-                sh 'npm run build'
+                sh 'echo abc'
             }
         }
         stage('Deploy') {
@@ -16,9 +15,8 @@ pipeline {
                 expression { params.ENVIRONMENT != 'dev' }
             }
             steps {
-                sh "docker build -t myapp:${params.TAG} ."
-                sh "docker push myapp:${params.TAG}"
-                sh "deploy.sh ${params.ENVIRONMENT} ${params.TAG}"
+                sh "echo dev"
+
             }
         }
     }
